--- a/assets/abi/MAMMSwapPair.json
+++ b/assets/abi/MAMMSwapPair.json
@@ -597,6 +597,13 @@
       "type": "function"
     },
     {
+      "inputs": [],
+      "name": "updateOraclePrice",
+      "outputs": [],
+      "stateMutability": "nonpayable",
+      "type": "function"
+    },
+    {
       "inputs": [{
           "internalType": "uint256",
           "name": "_newMMFRewards0",
